--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,31 @@
 </head>
 <body>
     <header>
-            About Portfolio Contact
+            <a href="index.html">About </a>
+            <a href="contact.html">Contact</a>
+            <a href="portfolio.html">Portfolio</a>
         
     </header>
         <section>
-        Contact
+        Nick Lombardo
         </section>
         <hr>
-      
-    <p>
-        Name
-        E-mail
-        Message
+        <div id="be">
+      <h1 id="contact"> Contact</h1>
+    <aside>
+        Name<div id= "N"></div>
+       E-mail <div id= "e"> </div>
+        Message <div id="m"></div>
 
-    </p>
+    </aside>
+    <div id="button">Submit</div>
+
+
+
+</div>
+
     <hr id="second-line">
+
     <footer>
 
 
